--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "nuxt": "latest",
     "nuxt-i18n": "^6.4.0"
   },
   "devDependencies": {
