--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.8.0",
     "nuxt": "latest",
     "nuxt-i18n": "^6.4.0"
   },
   "devDependencies": {
+    "@lokalise/node-api": "^1.4.0",
     "babel-eslint": "^10.0.1",
+    "dotenv": "^8.2.0",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "prettier": "1.19.1",
+    "request": "^2.88.0",
+    "unzipper": "^0.10.5"
   }
 }
