--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "types": [
-      "nuxt-i18n"
+      "nuxt-i18n",
+      "@nuxt/vue-app",
+      "@nuxtjs/axios"
     ]
   }
 }
