--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.8.0",
-    "nuxt": "latest",
+    "nuxt": "2.10",
     "nuxt-i18n": "^6.4.0"
   },
   "devDependencies": {
@@ -25,8 +25,10 @@
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^4.0.0",
+    "node-sass": "^4.13.0",
     "prettier": "1.19.1",
     "request": "^2.88.0",
+    "responsive-loader": "^1.2.0",
     "unzipper": "^0.10.5"
   }
 }
