--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^4.0.0",
+    "fs-extra": "^8.1.0",
     "node-sass": "^4.13.0",
     "prettier": "1.19.1",
     "request": "^2.88.0",
     "responsive-loader": "^1.2.0",
+    "sass-loader": "^8.0.0",
     "unzipper": "^0.10.5"
   }
 }
