Replace bootstrap by bootstrap-vue to be able to use plugins

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,5 @@
 {
-  "compilerOptions": {
-    "types": [
-      "nuxt-i18n",
-      "@nuxt/vue-app",
-      "@nuxtjs/axios"
-    ]
-  }
+    "compilerOptions": {
+        "types": ["nuxt-i18n", "@nuxt/vue-app", "@nuxtjs/axios", "dist/web-types.json"]
+    }
 }
