--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.8.0",
-    "bootstrap": "4",
-    "jquery": "3",
+    "bootstrap-vue": "^2.1.0",
     "nuxt": "2.10",
     "nuxt-i18n": "^6.4.0"
   },
